syntax = "proto3";

package com.ncirl.demo;

option java_multiple_files = true;
option java_package = "com.ncirl.demo.demoservice";
option java_outer_classname = "DemoServiceProto";

service DemoService {
  // Unary RPC
  rpc sendUnaryRequest(UnaryRequest) returns (UnaryResponse);

  // Server-side streaming RPC for health check
  rpc HealthCheck(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message UnaryRequest {
  string request = 1;
}

message UnaryResponse {
  string response = 1;
}

message HealthCheckRequest {
  string serviceName = 1;
  string serviceVersion = 2;
  int64 timestamp = 3;
}

message HealthCheckResponse {
  int32 status = 1;
  string message = 2;
}
